# Compilador_C_Pascal

./: CMakeLists.txt  README.md  main.c  teste.pas
errors/errors_lexer/: errors_lexer.h
errors/errors_parser/: errors_parser.c  errors_parser.h
lexer/: lexer.c  lexer.h
parser/: parser.c  parser.h
tests/: test_lexer.pas  test_lexer_2.pas
utils/: Tabela_de_simbolos
utils/hash_table/: hash.c  hash.h
utils/symbol_table/: symbol_table.c  symbol_table.h
utils/token_def/: token_def.h
